--- a/front.css
+++ b/front.css
@@ -19,8 +19,12 @@
 }
 
 body {
+  background-image: url(assets/background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
   font-family: 'Montserrat', sans-serif;
-  background: linear-gradient(135deg, #024bb9 0%, #011434 100%);
   color: var(--light);
   min-height: 100vh;
   display: flex;
@@ -62,16 +66,17 @@ input[type="text"] {
 }
 
 button {
+  margin-bottom: 15px;
   padding: 12px 25px;
   font-size: 16px;
   font-weight: bold;
   border: none;
   border-radius: 50px;
-  background: var(--accent);
+  background: var(--primary);
   color: white;
   cursor: pointer;
   transition: all 0.3s ease;
-  box-shadow: 0 4px 15px rgba(247, 37, 133, 1.2);
+  box-shadow: 0 6px 20px rgba(67, 97, 238, 0.8);
 }
 
 button:hover {
