--- a/front.css
+++ b/front.css
@@ -41,7 +41,7 @@ body {
   padding: 30px;
   max-width: 500px;
   width: 100%;
-  box-shadow: var(--box-shadow);
+  box-shadow: 0 4px 20px black;
   text-align: center;
 }
 
@@ -56,6 +56,7 @@ body {
 }
 
 input[type="text"] {
+  text-align: center;
   width: 100%;
   padding: 12px;
   font-size: 16px;
